--- a/index.html
+++ b/index.html
@@ -2,19 +2,22 @@
 <html>
 <head>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>            
-    <link rel='stylesheet' href='style.css'>
+
     <title>Nicholas Clohessy Portfolio</title>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <link rel='stylesheet' href='style.css'>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-    <div>
+<body class="background">
+    <div class="container">
     <h1>Nicholas Clohessy</h1>
+   
         <hr/>
         <div id="navigation" class="row">
             <a href='#biograph' class="col-4"><h3>About</h3></a>
             <a href='#contact' class="col-4"><h3>Contact</h3></a>
-            <a href='#portfolioArtif' class="col-4"><h3>Portfolio</h3></a>
+            <a href='#portfolio' class="col-4"><h3>Portfolio</h3></a>
         </div>
         <hr/>
 
@@ -30,8 +33,9 @@
                 <div class="col-6" id="pic">
             <img src ="photo.png.JPG" alt="Photo of Me!">
     </div>
-    <div id="portfolioArtif" class="col-6">
+    <div id="portfolio" class="col-6 portfolioArtif">
         <div class="row">
+            <h2 class="subtitle">Portfolio</h2>
             <div class="col-4">
                 <h2>Artifact 1</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aenean sed adipiscing diam donec adipiscing tristique risus nec feugiat. Praesent elementum facilisis leo vel fringilla est. Et malesuada fames ac turpis egestas maecenas pharetra. Eros in cursus turpis massa tincidunt. Ultricies integer quis auctor elit sed vulputate mi sit amet. In massa tempor nec feugiat nisl pretium fusce id. Nunc lobortis mattis aliquam faucibus purus in massa tempor. Mi sit amet mauris commodo quis imperdiet massa tincidunt. Pellentesque dignissim enim sit amet venenatis. Erat pellentesque adipiscing commodo elit at imperdiet dui accumsan sit. Pellentesque sit amet porttitor eget. Justo laoreet sit amet cursus sit amet. Nec feugiat nisl pretium fusce id velit ut tortor pretium. Enim tortor at auctor urna nunc id.</p>
@@ -50,15 +54,12 @@
         </div>
     </div>
     <hr/>
-        <p>
-            Site using <a href="https://loremipsum.io/">Lorem Ipsum</a> as placeholder. 
-        </p>
     </div>
-    <hr/>
-    <div class="col-6" id="contact">
+    <div class="col-12" id="contact">
+        <h2>Contact Me</h2>
         <a href="https://github.com/CaptFizzo/NClohessy.github.io">Github</a>
-    <a href="mailto:nick.clohessy@gmail.com">Email</a>
-</div>
+        <a href="mailto:nick.clohessy@gmail.com">Email</a>
+    </div>
 </div>
 </body>
 </html>
