--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
 
     <div id="biograph">
                 <h2>About Me!</h2>
-            <p>I am a staudent in Boise State's GIMM program. I have a deep interest in 
+            <p>I am a student in Boise State's GIMM program. I have a deep interest in 
                 learning and games. I also enjoy music of all forms greatly. 
             </p>
             <p>This website is a collection of work done through the program, with some early examples showing what has changed over time.</p>
     </div>
         <hr/>
+        <div class="container">
     <div class="row">
                 <div class="col-6" id="pic">
             <img src ="photo.png.JPG" alt="Photo of Me!">
@@ -53,6 +54,7 @@
 
         </div>
     </div>
+</div>
     <hr/>
     </div>
     <div class="col-12" id="contact">
