changed text and spacing

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         <hr/>
 
     <div id="biograph">
+        <div class="row">
+            <div col-12>
+                <p></p>
+            </div>
+        </div>
                 <h2>About Me!</h2>
             <p>I am a student in Boise State's GIMM program. I have a deep interest in 
                 learning and games. I also enjoy music of all forms greatly. 
@@ -29,6 +34,12 @@
             <p>This website is a collection of work done through the program, with some early examples showing what has changed over time.</p>
     </div>
         <hr/>
+        <div class="row">
+            <div col-12>
+                <p></p>
+            </div>
+        </div>
+        
         <div class="container">
     <div class="row">
                 <div class="col-6" id="pic">
