Changes for PA5

--- a/index.html
+++ b/index.html
@@ -37,21 +37,22 @@
     <div id="portfolio" class="col-6 portfolioArtif">
         <div class="row">
             <h2 class="subtitle">Portfolio</h2>
-            <div class="col-4">
+            <div class="col-12">
                 <h2>Artifact 1</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aenean sed adipiscing diam donec adipiscing tristique risus nec feugiat. Praesent elementum facilisis leo vel fringilla est. Et malesuada fames ac turpis egestas maecenas pharetra. Eros in cursus turpis massa tincidunt. Ultricies integer quis auctor elit sed vulputate mi sit amet. In massa tempor nec feugiat nisl pretium fusce id. Nunc lobortis mattis aliquam faucibus purus in massa tempor. Mi sit amet mauris commodo quis imperdiet massa tincidunt. Pellentesque dignissim enim sit amet venenatis. Erat pellentesque adipiscing commodo elit at imperdiet dui accumsan sit. Pellentesque sit amet porttitor eget. Justo laoreet sit amet cursus sit amet. Nec feugiat nisl pretium fusce id velit ut tortor pretium. Enim tortor at auctor urna nunc id.</p>
             </div>
-
-            <div class="col-4">
+            <div class="row">
+            <div class="col-12">
                 <h2>Artifact 2</h2>
                 <p>Justo donec enim diam vulputate ut. Scelerisque eu ultrices vitae auctor eu augue ut. Nibh nisl condimentum id venenatis a. Sit amet luctus venenatis lectus magna fringilla urna. Sapien nec sagittis aliquam malesuada bibendum arcu. Sollicitudin aliquam ultrices sagittis orci. Hendrerit dolor magna eget est lorem ipsum dolor sit amet. Maecenas accumsan lacus vel facilisis volutpat est velit egestas. Donec enim diam vulputate ut pharetra sit amet aliquam id. Quisque id diam vel quam elementum. Ultricies mi eget mauris pharetra et ultrices neque ornare aenean. Lectus urna duis convallis convallis tellus id interdum. Quis imperdiet massa tincidunt nunc pulvinar sapien et. Sed enim ut sem viverra aliquet eget sit amet. Integer vitae justo eget magna. Auctor neque vitae tempus quam pellentesque. Nisi vitae suscipit tellus mauris a diam maecenas sed enim. Faucibus et molestie ac feugiat. Sollicitudin ac orci phasellus egestas tellus rutrum tellus pellentesque eu.</p>
             </div>
-
-            <div class="col-4">
+            </div>
+        <div class="row">
+            <div class="col-12">
                 <h2>Artifact 3</h2>
                 <p>Non odio euismod lacinia at quis risus. Nulla at volutpat diam ut venenatis tellus in metus. Gravida in fermentum et sollicitudin ac. Facilisis magna etiam tempor orci. Mattis rhoncus urna neque viverra. Arcu felis bibendum ut tristique et egestas. Viverra accumsan in nisl nisi scelerisque eu ultrices vitae. At tellus at urna condimentum mattis pellentesque id nibh tortor. Eu augue ut lectus arcu bibendum at varius vel. Lorem ipsum dolor sit amet. Dui accumsan sit amet nulla facilisi morbi tempus iaculis urna. Vitae et leo duis ut diam quam nulla porttitor. Eget velit aliquet sagittis id consectetur purus ut faucibus. Quam viverra orci sagittis eu volutpat. Viverra maecenas accumsan lacus vel facilisis volutpat est velit. Consequat mauris nunc congue nisi vitae suscipit. Velit egestas dui id ornare arcu odio ut sem nulla. Ut lectus arcu bibendum at varius vel pharetra.</p>
             </div>
-
+        </div>
         </div>
     </div>
 </div>
