--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>            
 
     <title>Nicholas Clohessy Portfolio</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" rel="preconnect">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous" defer></script>
-    <link rel='stylesheet' href='style.css'>
+    <link rel='stylesheet' href='style.css' media="print" onload="this.media='all'">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="preload" as="image" href="photo.png.JPG">
 </head>
@@ -44,7 +44,7 @@
         <div class="container">
     <div class="row">
                 <div class="col-6" id="pic">
-            <img src ="photo.png.JPG" alt="Photo of Me!" fetchpriority="high">
+            <img src ="photo.png.JPG" alt="Photo of Me!" fetchpriority="high" loading="lazy">
     </div>
     <div id="portfolio" class="col-6 portfolioArtif">
         <div class="row">
