--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel='stylesheet' href='style.css' media="print" onload="this.media='all'">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="preload" as="image" href="photo.png.JPG">
+    <script src="https://kit.fontawesome.com/43b5a7a58b.js" crossorigin="anonymous"></script>
 </head>
 <body class="background">
     <div class="container">
@@ -72,8 +73,9 @@
     </div>
     <div class="col-12" id="contact">
         <h2>Contact Me</h2>
-        <a href="https://github.com/CaptFizzo/NClohessy.github.io">Github</a>
-        <a href="mailto:nick.clohessy@gmail.com">Email</a>
+        <a href="https://github.com/CaptFizzo/NClohessy.github.io"><i class="fa-brands fa-github fa-2xl"></i></a>
+        <a href="mailto:nick.clohessy@gmail.com"><i class="fa-solid fa-envelope fa-2xl"></i></a>
+        <a href="https://www.linkedin.com/in/nick-clohessy/"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
     </div>
 </div>
 </body>
