--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="container">
     <div class="row">
                 <div class="col-6" id="pic">
-            <img src ="photo.png.JPG" alt="Photo of Me!" fetchpriority="high" loading="lazy">
+            <img src ="Images/photo.png.JPG" alt="Photo of Me!" fetchpriority="high" loading="lazy">
     </div>
     <div id="portfolio" class="col-6 portfolioArtif">
         <div class="row">
