--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <p>
                 This project was my first foray into VR projects. It used a 360° camera and involved 3d sound and editing, as well as VR interaction. To start from nothing and end with a narrative interactive story in VR was very exciting. It also further reinforced teamwork and project managment skills.
             </p>
-            <iframe src="Videos/SideKickSearch.mp4" alt ="Coming Soon" class="vidArtif"></iframe>
+            <iframe src="Videos/SidekickVid.mp4" alt ="Coming Soon" class="vidArtif"></iframe>
         </div>
         </div>
     <div class="row">
