--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     Working on this website was my first interaction with backend programming. Trying to make a data visualization update and change for whatever data selected in a generative table was a test of my problem solving skills that I am very proud of. I haven’t had such a great feeling of satisfaction upon project completion before.
                 </p>
 
-            <iframe src="https://github.com/CaptFizzo/NClohessy.github.io/blob/main/Videos/PageDemo.mp4" class="vidArtif"></iframe>
+            <video controls src="Videos/PageDemo.mp4" class="vidArtif"></video>
             </div>
             
        
@@ -69,7 +69,8 @@
             <p>
                 This project was my first foray into VR projects. It used a 360° camera and involved 3d sound and editing, as well as VR interaction. To start from nothing and end with a narrative interactive story in VR was very exciting. It also further reinforced teamwork and project managment skills.
             </p>
-            <iframe src="https://github.com/CaptFizzo/NClohessy.github.io/blob/main/Videos/SidekickVid.mp4" alt ="Sidekick" class="vidArtif"></iframe>
+                <video controls src="Videos/SidekickVid.mp4" type="video/mp4" class="vidArtif"></video>
+
         </div>
         </div>
     <div class="row">
