--- a/index.html
+++ b/index.html
@@ -80,6 +80,19 @@
     </div>
     <div class="row">
         <div class="col-12 portfolioArtif">
+            <h2>Rat Race (2025)</h2>
+            <p>
+               A 3-way collaboration between myself and two others. The game is a multiplayer parkour game in which players try to escape the Rat King's dungeon with treasure before they are consumed by the swarm.
+               I was responsible for the sound design, music, and most of the networking, damage, AI, triggering, and menu system functionality.
+            </p>
+            <div class="video-container">
+                <iframe width="835" height="470" src="https://www.youtube.com/embed/8mokS84gLNw" title="Rat Race Game" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+        </div>
+        </div>
+</div>
+    <div class="row">
+        <div class="col-12 portfolioArtif">
             <h2>Drum Duels (2024)</h2>
             <p>
                Drum Duels was a project I worked on alongside 2 other students in Unreal Engine 5. I was responsible for the music and the physical wiring of our Arduino drumpad controller. 
